--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -14,7 +14,9 @@
     width: 500px;
     height: 600px;
     display: flex;
+    flex-direction: column;
     justify-content: center;
+    align-items: center;
     color: white;
     font-family: Roboto;
 }
@@ -97,4 +99,22 @@
     display: flex;
     justify-content: center;
     padding: 30px;
+}
+
+.succes {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(39, 132, 39);
+    border-radius: 10px;
+    padding: 5px;
+    width: 240px;
+}
+.succes h3 {
+    margin: 10px;
+}
+
+.succes_container {
+    display: flex;
+    justify-content: center;
 }
