--- a/src/components/About.css
+++ b/src/components/About.css
@@ -1,27 +1,41 @@
 .about_container {
-    background-color: rgb(3, 10, 72);
+    /* rgb(11, 17, 33); */
+    /* background-color: rgb(10, 25, 41); */
+    background: linear-gradient(rgb(11, 17, 33), rgb(10, 25, 41) 20%);
     display: flex;
 
     align-items: center;
+    justify-content: space-evenly;
     /* EL JUSTIFY CONTENT Y EL ALING ITEMS POSIBLE CAMBIO/REMOVE */
 }
 
 .text_section {
-    color: white;
+    color: rgb(212, 222, 236);
     font-family: Roboto;
     width: 500px;
     line-height: 30px;
     height: 370px;
     border-radius: 40px;
-    background-color: rgb(1, 3, 51);
+    background-color: rgb(7, 30, 69);
     padding: 50px;
+    margin-right: 40px;
+    box-shadow: 20px 10px 10px black;
 }
 
 .text_section h1 {
     margin-bottom: 10px;
+    color: rgb(255, 255, 255);
 }
 
 .image_container {
-    margin-right: 130px;
-    margin-left: 70px;
+    margin: 100px 0;
+}
+
+.image_container img {
+    height: 400px;
+}
+
+.separator {
+    height: 100px;
+    background: linear-gradient(rgb(10, 25, 41), rgb(2, 30, 50));
 }
