--- a/src/components/Contact.css
+++ b/src/components/Contact.css
@@ -1,7 +1,7 @@
 .contact {
     display: flex;
     height: 700px;
-    background-color: rgb(243, 126, 59);
+    background: linear-gradient(rgb(10, 25, 41), rgb(10, 25, 41));
     justify-content: space-around;
     align-items: center;
 }
@@ -10,15 +10,16 @@
     padding: 20px 0;
     margin: 40px;
     border-radius: 20px;
-    background-color: rgb(222, 59, 59);
+    background-color: rgba(7, 30, 69, 0.882);
     width: 500px;
     height: 600px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    color: white;
+    color: rgb(224, 219, 219);
     font-family: Roboto;
+    box-shadow: 10px 5px 5px black;
 }
 
 .form form {
@@ -41,7 +42,7 @@
     margin-bottom: 10px;
     padding: 10px;
     font-size: 1.3rem;
-    color: white;
+    color: rgb(232, 232, 232);
 }
 
 .form form label {
@@ -50,12 +51,13 @@
 
 .contact_icon {
     margin-left: 20px;
-    background-color: rgb(206, 114, 47);
+    background-color: rgb(16, 87, 25);
 
     height: 400px;
     display: flex;
     align-items: center;
     border-radius: 40px;
+    box-shadow: 10px 10px 10px black;
 }
 
 .contact_icon img {
@@ -71,7 +73,7 @@
     border-bottom: 2px solid rgb(42, 38, 43);
     margin: 0 0 30px 0;
     font-size: 1.3rem;
-    color: white;
+    color: rgb(232, 229, 229);
     font-family: Roboto;
     padding: 10px;
     resize: none;
@@ -92,7 +94,6 @@
 .form form button:hover {
     cursor: pointer;
     background-color: rgb(148, 18, 18);
-    box-shadow: 1px 1px 4px 1px rgb(42, 38, 43);
 }
 
 .button_area {
@@ -105,8 +106,9 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: rgb(39, 132, 39);
+    background-color: rgba(7, 30, 69, 0.882);
     border-radius: 10px;
+
     padding: 5px;
     width: 240px;
 }
