--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -1,15 +1,18 @@
 .home {
-    background-color: rgb(8, 8, 135);
+    /* background-color: rgb(8, 8, 135); */
+    background-color: rgb(11, 17, 33);
     display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .image__container {
     width: 400px;
     height: 400px;
-    margin-left: auto;
-    margin-right: 150px;
-    margin-top: 30px;
-    margin-bottom: 30px;
+    /* margin-left: auto;
+    margin-right: 150px; */
+    margin-top: 5%;
+    margin-bottom: 5%;
 }
 
 .image__container img {
@@ -20,35 +23,50 @@
 }
 
 .title {
-    width: 300px;
+    width: fit-content;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
     height: 400px;
-    margin-left: 170px;
+    /* margin-left: 170px; */
     color: white;
+    margin-top: 2%;
+    margin-bottom: 7%;
+    position: relative;
 }
 
 .title h1 {
     padding-top: 30px;
     padding-bottom: 40px;
     color: white;
-    font-size: 4rem;
+    font-size: 6.5rem;
+    font-family: monospace;
 }
 
 .title p {
     line-height: 30px;
     font-family: Roboto;
+    width: 70%;
+    text-align: center;
     font-size: 1.2rem;
+    /* color: rgb(147, 147, 143); */
+    color: rgb(148, 163, 184);
+    margin-bottom: 30px;
 }
 
 .buton_container {
     display: flex;
     align-items: center;
     justify-content: center;
-
+    position: absolute;
+    bottom: 0;
     background-color: rgb(106, 21, 203);
-    height: 40px;
-    width: 100px;
-    margin-left: 70px;
+    height: 50px;
+    width: 130px;
+    /* margin-left: 70px; */
     margin-top: 50px;
+
     border-radius: 8px;
 }
 
@@ -61,4 +79,8 @@
     font-family: Roboto;
     height: 40px;
     width: 100px;
+}
+
+.buton_container:hover {
+    background-color: rgb(127, 54, 212);
 }
