--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,13 +1,16 @@
 .navbar {
     display: flex;
     flex-direction: row-reverse;
-    background-color: rgb(7, 11, 108);
+    /* background-color: rgb(11, 17, 32); */
+    background: linear-gradient(rgb(2, 2, 17), rgb(11, 17, 32));
     height: 60px;
 }
 
 .navbar__container {
-    margin-right: 40px;
+    /* width: 40%;
+    margin-right: 3%; */
     display: flex;
+    margin-right: 50px;
 }
 
 .navbar p {
@@ -15,6 +18,7 @@
     background-color: rgba(127, 255, 212, 0);
     margin: 10px 30px;
     align-items: center;
+    /* width: 15%; */
 }
 
 /* .navbar p:hover {
@@ -30,4 +34,9 @@
     height: 50px;
     align-items: center;
     text-decoration: none;
+}
+
+.navbar p a:hover {
+    /* color: rgb(16, 184, 240); */
+    color: rgb(142, 236, 142);
 }
